{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 187,
  "lineage": "c438f5d6-ffbb-b3c6-4e21-3907b3853af3",
  "resources": [
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09100e341bda441c0",
            "arn": "arn:aws:ec2:us-west-2:570365194371:instance/i-018158a4c656e30a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018158a4c656e30a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "oregon-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0470987c8a601d846",
            "private_dns": "ip-12-1-0-227.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.1.0.227",
            "public_ip": "52.26.5.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ecc3e3b2e6f70bf1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cfce97419d8b9ad5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06676e870e8a6482a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cfce97419d8b9ad5"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.public",
            "module.vpc_sg.aws_security_group.dev-sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09100e341bda441c0",
            "arn": "arn:aws:ec2:us-west-2:570365194371:instance/i-061c05c82e95597e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061c05c82e95597e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "oregon-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0208c298806df5928",
            "private_dns": "ip-12-1-3-46.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.1.3.46",
            "public_ip": "34.208.228.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052eec2f8d6cef3ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cfce97419d8b9ad5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb831d29bce4bce2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cfce97419d8b9ad5"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.public",
            "module.vpc_sg.aws_security_group.dev-sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:internet-gateway/igw-06ebcca91b495d74b",
            "id": "igw-06ebcca91b495d74b",
            "owner_id": "570365194371",
            "tags": {
              "Env": "Development",
              "Name": "Dev-igw"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "Dev-igw"
            },
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:route-table/rtb-0b12f88b026351b06",
            "id": "rtb-0b12f88b026351b06",
            "owner_id": "570365194371",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "Development",
              "Name": "Dev-private-RT"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "Dev-private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:route-table/rtb-0c46b456ac5c09b6a",
            "id": "rtb-0c46b456ac5c09b6a",
            "owner_id": "570365194371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ebcca91b495d74b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Development",
              "Name": "Dev-public-RT"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "Dev-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.dev-igw",
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b78dec6809e8891",
            "route_table_id": "rtb-0b12f88b026351b06",
            "subnet_id": "subnet-04506cf7012f7d0a5"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private-RT",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db43025071527df3",
            "route_table_id": "rtb-0b12f88b026351b06",
            "subnet_id": "subnet-04e2e70c5f045e464"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private-RT",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c64f45c18a7eaf73",
            "route_table_id": "rtb-0b12f88b026351b06",
            "subnet_id": "subnet-09537416359de1e52"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private-RT",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bed82999efdc844",
            "route_table_id": "rtb-0c46b456ac5c09b6a",
            "subnet_id": "subnet-06676e870e8a6482a"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.dev-igw",
            "module.aws_vpc.aws_route_table.public-RT",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0137aca95986a6724",
            "route_table_id": "rtb-0c46b456ac5c09b6a",
            "subnet_id": "subnet-0bb831d29bce4bce2"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.dev-igw",
            "module.aws_vpc.aws_route_table.public-RT",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c1e885fe94da4f7",
            "route_table_id": "rtb-0c46b456ac5c09b6a",
            "subnet_id": "subnet-0cf3cd3864f64ebd5"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.dev-igw",
            "module.aws_vpc.aws_route_table.public-RT",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:subnet/subnet-04506cf7012f7d0a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "12.1.10.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04506cf7012f7d0a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570365194371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB-subnet-1"
            },
            "tags_all": {
              "Name": "DB-subnet-1"
            },
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:subnet/subnet-04e2e70c5f045e464",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "12.1.12.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e2e70c5f045e464",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570365194371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB-subnet-2"
            },
            "tags_all": {
              "Name": "DB-subnet-2"
            },
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:subnet/subnet-09537416359de1e52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "12.1.14.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09537416359de1e52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "570365194371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB-subnet-3"
            },
            "tags_all": {
              "Name": "DB-subnet-3"
            },
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:subnet/subnet-06676e870e8a6482a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "12.1.0.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06676e870e8a6482a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "570365194371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WEB-subnet-1"
            },
            "tags_all": {
              "Name": "WEB-subnet-1"
            },
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:subnet/subnet-0bb831d29bce4bce2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "12.1.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb831d29bce4bce2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "570365194371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WEB-subnet-2"
            },
            "tags_all": {
              "Name": "WEB-subnet-2"
            },
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:subnet/subnet-0cf3cd3864f64ebd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "12.1.4.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf3cd3864f64ebd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "570365194371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WEB-subnet-3"
            },
            "tags_all": {
              "Name": "WEB-subnet-3"
            },
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:vpc/vpc-0ff808547d9035ad1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.1.0.0/20",
            "default_network_acl_id": "acl-002229420d8d7f8df",
            "default_route_table_id": "rtb-06b9092df9b8cc931",
            "default_security_group_id": "sg-014258daab282f9f7",
            "dhcp_options_id": "dopt-0198b051e5f3da075",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff808547d9035ad1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b9092df9b8cc931",
            "owner_id": "570365194371",
            "tags": {
              "Env": "Development",
              "Name": "dev-test-vpc"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "dev-test-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:570365194371:security-group/sg-0cfce97419d8b9ad5",
            "description": "Allow SSH HTTP HTTPS NFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfce97419d8b9ad5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-dev",
            "name_prefix": "",
            "owner_id": "570365194371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Development",
              "Name": "Dev-sg"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "Dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff808547d9035ad1"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "name"
              }
            ]
          ],
          "dependencies": [
            "module.aws_vpc.aws_vpc.dev-vpc-01"
          ]
        }
      ]
    }
  ]
}